fix: make images full width on mobile

--- a/css/project.css
+++ b/css/project.css
@@ -161,6 +161,9 @@
 .project-visual-item {
   display: inline;
   width: calc(50% - 2px);
+  @media screen and (max-width: 1050px) {
+    width: 100%;
+  }
 }
 
 .project-visual-item--bordered {
